--- a/swipebook/css/style.css
+++ b/swipebook/css/style.css
@@ -1,119 +1,1 @@
-.feed-item {
-    margin: 0.5em;
-    padding: 1.2em;
-    border: 1px solid #EEE;
-    background: #FFF;
-    border-radius: 0.15em;
-    /*box-shadow: 0 0.1em 0.2em rgba(0,0,0,0.1);*/
-}
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-body {
-    background: #EBEBEB;
-    font: 400 16px sans-serif;
-    color: #6F6F6F;
-    overflow-x: hidden;
-}
-body.locked {
-    overflow: hidden;
-}
-.fbphoto {
-    display: inline-block;
-    vertical-align: bottom;
-    margin-top: 0.3em;
-}
-.fbphoto img {
-    border-radius: 50%;
-    width: 40px;
-    height: auto;
-    vertical-align: bottom;
-}
-.fbphoto.to:before {
-    content: "\00A0\25CF\00A0\25CF\00A0\25CF\00A0";
-    font-size: 1em;
-    color: #DFDFDF;
-    display: inline-block;
-}
-.status .footer {
-    border-top: 1.5px solid #DBDBDB;
-    margin: 0.7em -0.6em 0;
-    padding: 0.8em 0.6em 0;
-    position: relative;
-    /*box-shadow: 0px 1px 0px rgba(0,0,0,0.05) inset;*/
-}
-.footer .methods {
-    display: inline-block;
-    vertical-align: middle;
-}
-.methods .action {
-    display: inline-block;
-    padding: 0.8em;
-    background: #E8EEFF;
-    margin-left: 0.5em;
-    border: 1px solid #D4E3EC;
-    border-radius: 0.2em;
-}
-.status .footer:before {
-    content: "";
-    display: block;
-    width: 1em;
-    height: 1em;
-    border: 1.5px solid #DBDBDB;
-    -webkit-transform: rotate(45deg);
-    border-width: 0px 1px 1px 0;
-    background: #FFF;
-    position: absolute;
-    top: -0.5em;
-    left: 1.3em;
-}
-.header {
-    border-bottom: 1px solid #CCC;
-    margin: 0 -0.3em 0.9em;
-    padding: 0 0.3em 0.5em;
-}
-.header .message,
-.header .story {
-    font-size: 1.2em;
-    margin-left: 3em;
-    padding-bottom: 0.3em;
-}
-.header .fbphoto {
-    float: left;
-    display: block;
-    margin: 0 1em 0.2em 0;
-}
-.header:after {
-    content: "";
-    display: block;
-    clear: both;
-}
-.post-image {
-    position: relative;
-}
-.post-image:before {
-    content: "";
-    display: block;
-    background: url('mask.png');
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-}
-.post-image img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.animateSwipe {
-    -webkit-transition: opacity 0.7s, -webkit-transform 0.7s;
-}
-.composite {
-    -webkit-transform: translate3d(0,0,0);
-    -webkit-transform-origin-y: 450px;
-}
+body,html{width:100%;height:100%;margin:0;padding:0}body{background:#EBEBEB;font:400 16px sans-serif;color:#6F6F6F;overflow-x:hidden}
