--- a/src/less/style.less
+++ b/src/less/style.less
@@ -17,26 +17,30 @@ body {
     font: 400 16px sans-serif;
     color: #6F6F6F;
     overflow-x: hidden;
+    
+    &.locked {
+        overflow: hidden;
+    }
 }
-body.locked {
-    overflow: hidden;
-}
+
 .fbphoto {
     display: inline-block;
     vertical-align: bottom;
     margin-top: 0.3em;
-}
-.fbphoto img {
-    border-radius: 50%;
-    width: 40px;
-    height: auto;
-    vertical-align: bottom;
-}
-.fbphoto.to:before {
-    content: "\00A0\25CF\00A0\25CF\00A0\25CF\00A0";
-    font-size: 1em;
-    color: #DFDFDF;
-    display: inline-block;
+    
+    &.to:before {
+        content: "\00A0\25CF\00A0\25CF\00A0\25CF\00A0";
+        font-size: 1em;
+        color: #DFDFDF;
+        display: inline-block;
+    }
+    
+    img {
+        border-radius: 50%;
+        width: 40px;
+        height: auto;
+        vertical-align: bottom;
+    }
 }
 .status .footer {
     border-top: 1.5px solid #DBDBDB;
@@ -44,6 +48,20 @@ body.locked {
     padding: 0.8em 0.6em 0;
     position: relative;
     /*box-shadow: 0px 1px 0px rgba(0,0,0,0.05) inset;*/
+    
+    &:before {
+        content: "";
+        display: block;
+        width: 1em;
+        height: 1em;
+        border: 1.5px solid #DBDBDB;
+        -webkit-transform: rotate(45deg);
+        border-width: 0px 1px 1px 0;
+        background: #FFF;
+        position: absolute;
+        top: -0.5em;
+        left: 1.3em;
+    }
 }
 .footer .methods {
     display: inline-block;
@@ -57,57 +75,49 @@ body.locked {
     border: 1px solid #D4E3EC;
     border-radius: 0.2em;
 }
-.status .footer:before {
-    content: "";
-    display: block;
-    width: 1em;
-    height: 1em;
-    border: 1.5px solid #DBDBDB;
-    -webkit-transform: rotate(45deg);
-    border-width: 0px 1px 1px 0;
-    background: #FFF;
-    position: absolute;
-    top: -0.5em;
-    left: 1.3em;
-}
 .header {
     border-bottom: 1px solid #CCC;
     margin: 0 -0.3em 0.9em;
     padding: 0 0.3em 0.5em;
-}
-.header .message,
-.header .story {
-    font-size: 1.2em;
-    margin-left: 3em;
-    padding-bottom: 0.3em;
-}
-.header .fbphoto {
-    float: left;
-    display: block;
-    margin: 0 1em 0.2em 0;
-}
-.header:after {
-    content: "";
-    display: block;
-    clear: both;
+    
+    &:after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+    
+    .message,
+    .story {
+        font-size: 1.2em;
+        margin-left: 3em;
+        padding-bottom: 0.3em;
+    }
+    
+    .fbphoto {
+        float: left;
+        display: block;
+        margin: 0 1em 0.2em 0;
+    }
 }
 .post-image {
     position: relative;
-}
-.post-image:before {
-    content: "";
-    display: block;
-    background: url('/images/mask.png');
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-}
-.post-image img {
-    width: 100%;
-    height: auto;
-    display: block;
+    
+    &:before {
+        content: "";
+        display: block;
+        background: url('/images/mask.png');
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+    }
+    
+    img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
 }
 
 .animateSwipe {
