--- a/src/less/style.less
+++ b/src/less/style.less
@@ -125,5 +125,5 @@ body {
 }
 .composite {
     -webkit-transform: translate3d(0,0,0);
-    -webkit-transform-origin-y: 450px;
+    -webkit-transform-origin-y: 165%;
 }
