--- a/templates/basesite.html
+++ b/templates/basesite.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <script src="/js/jquery-2.1.1.min.js"></script>
     <script src="/js/handlebars-v1.3.0.js"></script>
+    <script src="/js/app/main.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
     <meta name="viewport" content="width=device-width, inital-scale=1, maximum-scale=1, minimum-scale=1">
 </head>
