--- a/src/less/style.less
+++ b/src/less/style.less
@@ -120,10 +120,130 @@ body {
     }
 }
 
+#loading {
+    display: none;
+    padding-top: 120px;
+    
+    .loading & {
+        display: block;
+    }
+}
+
+#feed {
+    display: block;
+    .login &, .initializing & {
+        display: none;
+    }
+}
+
+#allread {
+    display: none;
+    color: #FFF;
+    padding-top: 190px;
+    text-align: center;
+    font-size: 2.9em;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+    
+    .allread & {
+        display: block;
+    }
+    .allread.loading &, .allread.login & {
+        display: none;
+    }
+    
+    button {
+        display: block;
+        background: #5CC57E;
+        color: #fff;
+        font-size: 0.6em;
+        margin: 0.9em auto;
+        padding: 0.3em 1.1em;
+        border: 0;
+        border-radius: 0.2em;
+    }
+}
+
+#fblogin {
+    background: #3B5998;
+    color: #FFF;
+    border: 0;
+    border-radius: 0.3em;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 0.65em 2em;
+    margin: 0 auto;
+    display: block;
+}
+
+#login {
+    display: none;
+    padding-top: 180px;
+    .login & {
+        display: block;
+    }
+}
+
+
+
+
+/* Animations */
+
 .animateSwipe {
     -webkit-transition: opacity 0.7s, -webkit-transform 0.7s;
 }
 .composite {
     -webkit-transform: translate3d(0,0,0);
     -webkit-transform-origin-y: 165%;
+}
+
+
+.spinner {
+    margin: 100px auto;
+    height: 120px;
+    text-align: center;
+    font-size: 10px;
+    
+    & > div {
+        background-color: #3B5998;
+        height: 100%;
+        width: 31px;
+        display: inline-block;
+        margin: 1px;
+        
+        -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+        animation: stretchdelay 1.2s infinite ease-in-out;
+    }
+    .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
+    }
+    
+    .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+    }
+    .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
+    }
+    .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+    }
+}
+
+@-webkit-keyframes stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+    20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes stretchdelay {
+    0%, 40%, 100% { 
+        transform: scaleY(0.4);
+        -webkit-transform: scaleY(0.4);
+    }  20% { 
+        transform: scaleY(1.0);
+        -webkit-transform: scaleY(1.0);
+    }
 }
