--- a/templates/basesite.html
+++ b/templates/basesite.html
@@ -8,8 +8,10 @@
     <script src="/js/app/main.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
     <meta name="viewport" content="width=device-width, inital-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="Swipebook">
 </head>
-<body>
+<body class="loading initializing">
     <%= content %>
 </body>
 </html>
